comments in set up chunk, changing colors and aestheics in basic visualization

--- a/code/ENVS-193DS_workshop-07_complete.qmd
+++ b/code/ENVS-193DS_workshop-07_complete.qmd
@@ -21,9 +21,11 @@ library(ggeffects) # generating model predictions
 library(gtsummary) # generating summary tables for models
 
 # abalone data from Hamilton et al. 2022
+# telling R to look in the data folder for the abalone data file
 abalone <- read_xlsx(here("data", "Abalone IMTA_growth and pH.xlsx"))
 
 # Sonadora temperature data from Alonzo, A. 2024
+# telling R to look in the data folder for the temperature file
 sonadora <- read_csv(here("data", "Temp_SonadoraGradient_Daily.csv"))
 ```
 
@@ -65,8 +67,13 @@ ggplot(data = abalone_clean,
   # first layer: points representing abalones
   geom_point(size = 4,
              stroke = 1,
-             fill = "firebrick4",
-             shape = 21)
+             fill = "#459078",
+             shape = 21) +
+  # using a built in theme
+  theme_minimal() +
+  # chaning the labels
+  labs( x = "pH",
+        y = "Change in Shell Surface Area per Day")
 ```
 
 ## d. Abalone model
